--- a/model import/11.html
+++ b/model import/11.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="css/css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body class="bd">
-    <div class="bd1">hello</div>
+<div class="bd1">hello</div>
 </body>
 </html>
